# fitness_dashboard

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
code/dashboard/: body_comp.py  main.py  nutrition.py  steps.py
code/data_preprocessing/: body_comp.py  gym_progression.py  habits.py  step_count.py  tempCodeRunnerFile.py  test.py
